--- a/appPrincipal/views/layout.ejs
+++ b/appPrincipal/views/layout.ejs
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PampaBooks - <%= title %></title>
+    <link rel="stylesheet" href="/stylesheets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
     
