--- a/appPrincipal/views/index.ejs
+++ b/appPrincipal/views/index.ejs
@@ -1,11 +1,29 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<main>
+  <section class="promocao">
+    <div class="container">
+      <h2>Promoções</h2>
+      <p>Veja as promoções da semana e adquira o livro que sempre sonhou!</p>
+      <div class="produtos-container" id="produto-promocao">
+        
+      </div>
+    </div>
+  </section>
+  <section class="novidade">
+    <div class="container">
+      <h2>Lançamentos</h2>
+      <p>Descubra as novidades mais recentes no mundo literário. Livros que acabaram de chegar para você!</p>
+      <div class="produtos-container" id="produto-novidade">
+
+      </div>
+    </div>
+  </section>
+  <section class="em-alta">
+    <div class="container">
+      <h2>Em Alta</h2>
+      <p>Os livros mais populares do momento! Veja o que todo mundo está lendo e comentando.</p>
+      <div class="produtos-container" id="produto-em-alta">
+        
+      </div>
+    </div>
+  </section>
+</main>
